<?xml version="1.0"?>
<package>
  <name>sgbm_ros</name>
  <version>1.0.0</version>
  <description>The ros sbgm package</description>

  <maintainer email="fgaoaa@gmail.com">Fei Gao</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
